Se modifico media queris de celular

--- a/scss/_Index.scss
+++ b/scss/_Index.scss
@@ -111,7 +111,7 @@
     }
 
   .container-fluid{
-    width: 18rem ;
+    width: 21rem ;
     height:9rem ;
     padding: 0.5rem;
     margin-left: 0.5rem;
@@ -149,8 +149,12 @@
       font-size: 1.25rem;
       padding: 0.25rem;
       border-radius:10rem;
-      margin-left:7rem;
+      margin-left:8rem;
       margin-right: 5rem ;
+      &:hover {  
+        transform: scale(1.10);
+        padding:0.5rem ;
+         }
       } 
     
   } 
