--- a/scss/_actitud.scss
+++ b/scss/_actitud.scss
@@ -150,13 +150,13 @@
   }
 
   .container-fluid1 {
-    width: 32rem;
-    height: auto;
+    width: 40rem;
+    height: 20rem;
   } 
   .container__actitud1 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 20rem;
+    grid-template-rows: 22rem;
     gap: 1rem;
     padding-bottom: 0.10rem;
     margin-left: 2rem;
@@ -248,13 +248,14 @@
 
   .actitudTituloh2 {
     font-size: 1.25rem;
+    text-align: center;
     margin-left: 1rem;
     padding-top: 2rem;
     padding-bottom: 2rem;
     }
 
    .container-fluid1 {
-    width: 17em;
+    width: 17rem;
     height: auto;
     } 
 
@@ -286,8 +287,8 @@
     }
 
   .container__texto2{
-    font-size: 0.75rem;
-    text-align: justify;
+    font-size: 1rem;
+    text-align: left;
     }
 
   .container__actitud2 {
