--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -61,11 +61,7 @@ a {
 
 @media (min-width: 320px) and (max-width: 540px) {
   
-  body{
-    margin-bottom: 0.5rem;
-  }
-
-  header {
+    header {
     margin-left: 0.5rem;
     margin-right: 0.5rem;
     padding-top: 1rem;
@@ -81,20 +77,20 @@ a {
     }
 
   .navegador {
-    margin-left: 0.1rem;
-    padding-top: 0.1rem; 
-    }
- 
+    margin-left: 2rem ;
+    }  
 
   .navegador p a{
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
     font-weight: 0.5rem;
-    font-size: 0.75rem;
-    border-left: 0.1rem solid white;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem;
+    font-size: 0.5rem;
+    border-left: 0.2rem solid white;
+    padding-left: 2rem;
+  
     }    
 
-  
+  /*.a{
+    font-size: 2rem;
+  }*/
   }
