--- a/css/estilos.css
+++ b/css/estilos.css
@@ -67,8 +67,6 @@ a {
     height: 10vh; } }
 
 @media (min-width: 320px) and (max-width: 540px) {
-  body {
-    margin-bottom: 0.5rem; }
   header {
     margin-left: 0.5rem;
     margin-right: 0.5rem;
@@ -79,16 +77,17 @@ a {
     width: 30vw;
     height: 8vh; }
   .navegador {
-    margin-left: 0.1rem;
-    padding-top: 0.1rem; }
+    margin-left: 2rem; }
   .navegador p a {
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     color: white;
     font-weight: 0.5rem;
-    font-size: 0.75rem;
-    border-left: 0.1rem solid white;
-    padding-left: 0.5rem;
-    padding-right: 0.5rem; } }
+    font-size: 0.5rem;
+    border-left: 0.2rem solid white;
+    padding-left: 2rem; }
+  /*.a{
+    font-size: 2rem;
+  }*/ }
 
 footer {
   display: flex;
@@ -230,7 +229,7 @@ p a:hover {
     margin-top: 0.25rem;
     margin-bottom: 0.25rem; }
   .container-fluid {
-    width: 18rem;
+    width: 21rem;
     height: 9rem;
     padding: 0.5rem;
     margin-left: 0.5rem;
@@ -260,8 +259,11 @@ p a:hover {
     font-size: 1.25rem;
     padding: 0.25rem;
     border-radius: 10rem;
-    margin-left: 7rem;
-    margin-right: 5rem; } }
+    margin-left: 8rem;
+    margin-right: 5rem; }
+    .btn:hover {
+      transform: scale(1.1);
+      padding: 0.5rem; } }
 
 .nosotrosTituloh2 {
   text-align: center;
@@ -491,11 +493,11 @@ p a:hover {
 @media (min-width: 320px) and (max-width: 540px) {
   .nosotrosTituloh2 {
     font-size: 1.25rem;
-    padding: 1rem; }
+    margin-top: 0.25rem; }
   .grid__container__nosotros1 {
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 12rem 12rem 12rem;
+    grid-template-rows: 12rem 12rem 15rem;
     gap: 0.5rem;
     padding-top: 0.25rem;
     margin-left: 0.5rem;
@@ -518,7 +520,7 @@ p a:hover {
   .grid__container__nosotros2 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 20rem 15rem 20rem 15rem 5rem;
+    grid-template-rows: 21rem 15rem 21rem 15rem 5rem;
     gap: 1rem;
     padding-top: 0.5rem;
     padding-bottom: 0.10rem;
@@ -549,7 +551,7 @@ p a:hover {
   .p__link {
     width: 10rem;
     height: 3rem;
-    margin-left: 3.5rem; }
+    margin-left: 4rem; }
   .linkContactoNosotros {
     font-size: 1rem;
     padding-bottom: 2rem;
@@ -562,7 +564,7 @@ p a:hover {
     font-size: 1.25rem;
     padding: 0.5rem;
     border-radius: 10rem;
-    margin-left: 7rem;
+    margin-left: 8rem;
     margin-right: 5rem; } }
 
 .galeriaTituloh2 {
@@ -691,7 +693,6 @@ p a:hover {
 @media (min-width: 320px) and (max-width: 540px) {
   .galeriaTituloh2 {
     font-size: 1.25rem;
-    padding: 1rem;
     margin-left: 1rem; }
   .gridTexto {
     font-size: 1.25rem; }
@@ -714,7 +715,7 @@ p a:hover {
     height: 3.33333rem;
     font-size: 1.25rem;
     padding: 0.5rem;
-    margin-left: 7rem;
+    margin-left: 8rem;
     margin-right: 5rem; } }
 
 .actitudTituloh2 {
@@ -843,12 +844,12 @@ p a:hover {
     padding-bottom: 2rem;
     text-align: center; }
   .container-fluid1 {
-    width: 32rem;
-    height: auto; }
+    width: 40rem;
+    height: 20rem; }
   .container__actitud1 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 20rem;
+    grid-template-rows: 22rem;
     gap: 1rem;
     padding-bottom: 0.10rem;
     margin-left: 2rem;
@@ -910,11 +911,12 @@ p a:hover {
 @media (min-width: 320px) and (max-width: 540px) {
   .actitudTituloh2 {
     font-size: 1.25rem;
+    text-align: center;
     margin-left: 1rem;
     padding-top: 2rem;
     padding-bottom: 2rem; }
   .container-fluid1 {
-    width: 17em;
+    width: 17rem;
     height: auto; }
   .container__actitud1 {
     display: grid;
@@ -936,8 +938,8 @@ p a:hover {
     font-size: 1rem;
     text-align: justify; }
   .container__texto2 {
-    font-size: 0.75rem;
-    text-align: justify; }
+    font-size: 1rem;
+    text-align: left; }
   .container__actitud2 {
     margin-left: 1rem;
     margin-right: 2rem;
@@ -1177,7 +1179,7 @@ p a:hover {
     padding-top: 1rem; }
   .grid__container__contacto {
     grid-template-columns: 100%;
-    grid-template-rows: 18rem 18rem 18rem 18rem 4rem 6rem;
+    grid-template-rows: 18rem 20rem 18rem 18rem 6rem 6rem;
     justify-items: left;
     align-items: left;
     padding-left: 0.5rem;
@@ -1186,7 +1188,7 @@ p a:hover {
     padding-top: 0.5rem;
     padding-bottom: 3rem;
     width: 18rem;
-    height: 88rem; }
+    height: 90rem; }
   .key1-contacto {
     width: 17rem;
     height: 15rem; }
@@ -1242,11 +1244,11 @@ p a:hover {
     font-size: 2rem;
     padding: 1rem;
     width: 17rem;
-    height: 25rem;
+    height: 27rem;
     margin-left: 1rem;
     margin-right: 1rem;
     margin-top: 2rem;
-    margin-bottom: 1.5rem; }
+    margin-bottom: 2rem; }
   .imput .contacto__imput {
     font-size: 1rem;
     padding: 0.50rem; } }
