--- a/css/estilos.css
+++ b/css/estilos.css
@@ -229,7 +229,7 @@ p a:hover {
     margin-top: 0.25rem;
     margin-bottom: 0.25rem; }
   .container-fluid {
-    width: 21rem;
+    width: 23rem;
     height: 9rem;
     padding: 0.5rem;
     margin-left: 0.5rem;
@@ -551,7 +551,7 @@ p a:hover {
   .p__link {
     width: 10rem;
     height: 3rem;
-    margin-left: 4rem; }
+    margin-left: 5rem; }
   .linkContactoNosotros {
     font-size: 1rem;
     padding-bottom: 2rem;
@@ -916,7 +916,7 @@ p a:hover {
     padding-top: 2rem;
     padding-bottom: 2rem; }
   .container-fluid1 {
-    width: 17rem;
+    width: 20rem;
     height: auto; }
   .container__actitud1 {
     display: grid;
@@ -955,7 +955,7 @@ p a:hover {
   .container__actitud3 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 13rem 25rem;
+    grid-template-rows: 13rem 27rem;
     gap: 1rem;
     padding-top: 2rem;
     padding-bottom: 0.10rem;
@@ -971,7 +971,7 @@ p a:hover {
     grid-row: 2/3;
     grid-column: 1/1; }
   .imagenActitud {
-    width: 17rem;
+    width: 20rem;
     height: auto; }
   .linkContactoActitud {
     font-size: 1rem;
@@ -984,7 +984,7 @@ p a:hover {
     height: 3.33333rem;
     font-size: 1.25rem;
     padding: 0.5rem;
-    margin-left: 7rem;
+    margin-left: 8rem;
     margin-right: 5rem; } }
 
 .contactoTituloh2 {
@@ -1179,25 +1179,22 @@ p a:hover {
     padding-top: 1rem; }
   .grid__container__contacto {
     grid-template-columns: 100%;
-    grid-template-rows: 18rem 20rem 18rem 18rem 6rem 6rem;
+    grid-template-rows: 18rem 22rem 18rem 18rem 6rem 6rem;
     justify-items: left;
     align-items: left;
     padding-left: 0.5rem;
-    gap: 1rem;
-    margin-left: 1rem;
+    gap: 0.75rem;
+    margin-left: 2rem;
     padding-top: 0.5rem;
     padding-bottom: 3rem;
     width: 18rem;
-    height: 90rem; }
+    height: 92rem; }
   .key1-contacto {
-    width: 17rem;
-    height: 15rem; }
+    width: 17rem; }
   .key2-contacto {
-    width: 17rem;
-    height: 15rem; }
+    width: 17rem; }
   .key3-contacto {
-    width: 17rem;
-    height: 15rem; }
+    width: 17rem; }
   .grid__container__contacto .grid__uno {
     align-content: center;
     grid-row: 1/2;
@@ -1223,7 +1220,7 @@ p a:hover {
     grid-row: 5/6;
     grid-column: 1/1;
     width: 17rem;
-    height: 4rem; }
+    height: 6rem; }
   .grid__container__contacto .grid__tres__texto {
     grid-row: 6/7;
     grid-column: 1/1;
@@ -1243,9 +1240,9 @@ p a:hover {
   .imput {
     font-size: 2rem;
     padding: 1rem;
-    width: 17rem;
-    height: 27rem;
-    margin-left: 1rem;
+    width: 18rem;
+    height: 28rem;
+    margin-left: 2rem;
     margin-right: 1rem;
     margin-top: 2rem;
     margin-bottom: 2rem; }
