Se modifico media queris de celular

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -74,8 +74,8 @@ a {
   .tituloh1 {
     font-size: 1.25rem; }
   .logo {
-    width: 30vw;
-    height: 8vh; }
+    width: 33vw;
+    height: 7vh; }
   .navegador {
     margin-left: 2rem; }
   .navegador p a {
@@ -232,10 +232,11 @@ p a:hover {
     width: 23rem;
     height: 9rem;
     padding: 0.5rem;
+    padding-bottom: 1rem;
     margin-left: 0.5rem;
     margin-right: 1rem;
     margin-top: 0.5rem;
-    margin-bottom: 0.5rem; }
+    margin-bottom: 2rem; }
   .indexTexto {
     flex-direction: column;
     font-size: 0.5rem;
@@ -1179,7 +1180,7 @@ p a:hover {
     padding-top: 1rem; }
   .grid__container__contacto {
     grid-template-columns: 100%;
-    grid-template-rows: 18rem 22rem 18rem 18rem 6rem 6rem;
+    grid-template-rows: 18rem 24rem 18rem 18rem 6rem 6rem;
     justify-items: left;
     align-items: left;
     padding-left: 0.5rem;
@@ -1188,7 +1189,7 @@ p a:hover {
     padding-top: 0.5rem;
     padding-bottom: 3rem;
     width: 18rem;
-    height: 92rem; }
+    height: 95rem; }
   .key1-contacto {
     width: 17rem; }
   .key2-contacto {
