--- a/scss/_Index.scss
+++ b/scss/_Index.scss
@@ -114,10 +114,11 @@
     width: 23rem ;
     height:9rem ;
     padding: 0.5rem;
+    padding-bottom: 1rem;
     margin-left: 0.5rem;
     margin-right: 1rem;
     margin-top: 0.5rem;
-    margin-bottom: 0.5rem;
+    margin-bottom: 2rem;
     }
     
   .indexTexto{
