Se modificaron tamaños de key

--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -6,6 +6,7 @@ $color-h3:white;
 $color-h4:white;
 $color-p:white;
 $color-btn:white;
+$color-contacto__imput2:black;
 $font-family-body:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
 $font-size-h1:3rem;
 $font-size-h2:2.5rem;
