--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,21 +1,21 @@
 .key1-contacto {
   background-image: url("..recursos/contacto/contacto__1.jpg");
-  width: 30rem;
-  height: 20rem;
+  width: 35rem;
+  height: 30rem;
   border: 1rem;
   border-radius: 3rem; }
 
 .key2-contacto {
   background-image: url("..recursos/contacto/contacto__2.jpg");
-  width: 30rem;
-  height: 20rem;
+  width: 35rem;
+  height: 30rem;
   border: 1rem;
   border-radius: 3rem; }
 
 .key3-contacto {
   background-image: url("..recursos/contacto/contacto__5.jpg");
-  width: 30rem;
-  height: 20rem;
+  width: 35rem;
+  height: 30rem;
   border: 1rem;
   border-radius: 3rem; }
 
@@ -996,7 +996,7 @@ p a:hover {
 .grid__container__contacto {
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: 18rem 18rem 5rem;
+  grid-template-rows: 30rem 30rem 5rem;
   margin-left: 1rem;
   margin-right: 10rem;
   gap: 5rem;
@@ -1020,8 +1020,8 @@ p a:hover {
   background-position: inherit;
   background-size: cover;
   background-repeat: no-repeat;
-  width: 30rem;
-  height: 20rem;
+  width: 35rem;
+  height: 30rem;
   padding-top: 0.5rem;
   padding-right: 0.5rem;
   padding: 0.50rem;
@@ -1089,7 +1089,7 @@ p a:hover {
   font-size: 2rem;
   padding: 1rem;
   width: 30rem;
-  height: 20rem;
+  height: 23rem;
   text-align: center;
   margin-left: 30rem;
   margin-top: 2rem;
@@ -1100,6 +1100,18 @@ p a:hover {
   font-size: 1.5rem;
   padding: 0.50rem;
   color: white; }
+
+.imput .contacto__imput1 {
+  padding: 0.50rem;
+  color: white;
+  height: 2rem;
+  width: 17rem; }
+
+.imput .contacto__imput2 {
+  padding: 0.50rem;
+  color: white;
+  height: 5rem;
+  width: 15rem; }
 
 @media (min-width: 541px) and (max-width: 720px) {
   .contactoTituloh2 {
@@ -1162,14 +1174,14 @@ p a:hover {
   .imput {
     font-size: 2rem;
     padding: 1rem;
-    width: 23rem;
-    height: 17rem;
+    width: 30rem;
+    height: 22rem;
     margin-left: 6.5rem;
     margin-right: 4rem;
     margin-top: 2rem;
     margin-bottom: 2rem; }
   .imput .contacto__imput {
-    font-size: 1rem;
+    font-size: 1.25rem;
     padding: 0.50rem; } }
 
 @media (min-width: 320px) and (max-width: 540px) {
@@ -1180,7 +1192,7 @@ p a:hover {
     padding-top: 1rem; }
   .grid__container__contacto {
     grid-template-columns: 100%;
-    grid-template-rows: 18rem 24rem 18rem 18rem 6rem 6rem;
+    grid-template-rows: 15rem 19rem 15rem 15rem 6rem 6rem;
     justify-items: left;
     align-items: left;
     padding-left: 0.5rem;
@@ -1189,34 +1201,34 @@ p a:hover {
     padding-top: 0.5rem;
     padding-bottom: 3rem;
     width: 18rem;
-    height: 95rem; }
+    height: 80rem; }
   .key1-contacto {
-    width: 17rem; }
+    width: 17rem;
+    height: 15rem; }
   .key2-contacto {
-    width: 17rem; }
+    width: 17rem;
+    height: 15rem; }
   .key3-contacto {
-    width: 17rem; }
+    width: 17rem;
+    height: 15rem; }
   .grid__container__contacto .grid__uno {
     align-content: center;
     grid-row: 1/2;
     grid-column: 1/1;
-    width: 17rem;
-    height: 18rem; }
+    width: 17rem; }
   .grid__container__contacto .grid__uno__texto {
     grid-row: 2/3;
     grid-column: 1/1;
     width: 17rem;
-    height: 18rem; }
+    height: 19rem; }
   .grid__container__contacto .grid__dos {
     grid-row: 3/4;
     grid-column: 1/1;
-    width: 17rem;
-    height: 18rem; }
+    width: 17rem; }
   .grid__container__contacto .grid__tres {
     grid-row: 4/5;
     grid-column: 1/1;
-    width: 17rem;
-    height: 18rem; }
+    width: 17rem; }
   .grid__container__contacto .grid__dos__texto {
     grid-row: 5/6;
     grid-column: 1/1;
@@ -1241,15 +1253,21 @@ p a:hover {
   .imput {
     font-size: 2rem;
     padding: 1rem;
-    width: 18rem;
-    height: 28rem;
-    margin-left: 2rem;
+    width: 20rem;
+    height: 31rem;
+    margin-left: 1rem;
     margin-right: 1rem;
     margin-top: 2rem;
     margin-bottom: 2rem; }
   .imput .contacto__imput {
-    font-size: 1rem;
-    padding: 0.50rem; } }
+    font-size: 1.25rem;
+    padding: 0.50rem; }
+    .imput .contacto__imput .imput .contacto__imput1 {
+      height: 2rem;
+      width: 6rem; }
+    .imput .contacto__imput .imput .contacto__imput2 {
+      height: 5rem;
+      width: 7rem; } }
 
 * {
   margin: 0px;
