--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -7,7 +7,7 @@
 .grid__container__contacto {
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: 18rem 18rem 5rem;
+  grid-template-rows: 30rem 30rem 5rem;
   margin-left: 1rem;
   margin-right: 10rem;
   gap: 5rem;
@@ -33,8 +33,8 @@
   background-position: inherit;
   background-size: cover;
   background-repeat: no-repeat;
-  width: 30rem;
-  height: 20rem;
+  width: 35rem;
+  height: 30rem;
   padding-top: 0.5rem;
   padding-right: 0.5rem;
   padding: 0.50rem;
@@ -110,20 +110,33 @@
   font-size: 2rem;
   padding: 1rem;
   width: 30rem;
-  height: 20rem;
+  height: 23rem;
   text-align: center;
   margin-left: 30rem;
-  
   margin-top: 2rem;
   margin-bottom: 2rem; 
   border-radius: 7%;
   }
+.imput .contacto__imput{
+    font-size: 1.5rem;
+    padding: 0.50rem;
+    color: white; 
+    }
 
-.imput .contacto__imput {
-  font-size: 1.5rem;
+.imput .contacto__imput1 {
   padding: 0.50rem;
   color: white; 
+  height: 2rem;
+  width: 17rem;
   }
+
+.imput .contacto__imput2{
+  padding: 0.50rem;
+  color: white; 
+  height: 5rem;
+  width: 15rem;
+  }
+
 
 @media (min-width: 541px) and (max-width: 720px) {
   .contactoTituloh2{
@@ -208,8 +221,8 @@
   .imput {
     font-size: 2rem;
     padding: 1rem;
-    width: 23rem;
-    height: 17rem;
+    width: 30rem;
+    height: 22rem;
     margin-left: 6.5rem;
     margin-right: 4rem;
     margin-top: 2rem;
@@ -217,7 +230,7 @@
     }
       
   .imput .contacto__imput {
-    font-size: 1rem;
+    font-size: 1.25rem;
     padding: 0.50rem;
      }
   }
@@ -233,7 +246,7 @@
   
   .grid__container__contacto {
     grid-template-columns: 100%;
-    grid-template-rows: 18rem 24rem 18rem 18rem 6rem 6rem;
+    grid-template-rows: 15rem 19rem 15rem 15rem 6rem 6rem;
     justify-items: left;
     align-items: left;
     padding-left: 0.5rem;
@@ -242,21 +255,24 @@
     padding-top: 0.5rem;
     padding-bottom: 3rem;
     width: 18rem;
-    height:95rem;
+    height:80rem;
      }
 
   .key1-contacto{
     width: 17rem;
+    height: 15rem;
    
     }
 
   .key2-contacto{
     width: 17rem;
+    height: 15rem;
    
     }
 
   .key3-contacto{
     width: 17rem;
+    height: 15rem;
    
     }
   
@@ -265,21 +281,21 @@
     grid-row: 1/2;
     grid-column: 1/1;
     width: 17rem;
-    height: 18rem;
+    
      }
   
   .grid__container__contacto .grid__uno__texto {
     grid-row: 2/3;
     grid-column:1/1;
     width: 17rem;
-    height: 18rem;
+    height: 19rem;
      }
  
   .grid__container__contacto .grid__dos {
     grid-row: 3/4;
     grid-column: 1/1;
     width: 17rem;
-    height: 18rem;
+    
     
     }
 
@@ -287,7 +303,7 @@
     grid-row: 4/5;
     grid-column: 1/1;
     width: 17rem;
-    height: 18rem;
+    
        
     }         
 
@@ -325,17 +341,32 @@
   .imput {
     font-size: 2rem;
     padding: 1rem;
-    width: 18rem;
-    height: 28rem;
-    margin-left: 2rem;
+    width: 20rem;
+    height: 31rem;
+    margin-left: 1rem;
     margin-right: 1rem;
     margin-top: 2rem;
     margin-bottom: 2rem; 
     }
       
   .imput .contacto__imput {
-    font-size: 1rem;
+    font-size: 1.25rem;
     padding: 0.50rem;
+
+  .imput .contacto__imput1 {
+      height: 2rem;
+      width: 6rem;
+      }
+    
+  .imput .contacto__imput2{
+      height: 5rem;
+      width: 7rem;
+      }
+
+
+
+
+
     }
  }
 
