--- a/scss/style.scss
+++ b/scss/style.scss
@@ -34,16 +34,126 @@ h3 {
   color: $color-h3; 
    }  
  
- h4{
+h4{
   font-size: $font-size-h4;
   color:$color-h4; 
-   }  
-  
-
+   }   
 
 p {
   font-size: $font-size-p; 
   color:$color-p;
   }
 
+.tituloh2{
+  text-align: center;  
+  color: white;
+  padding: 0.5rem;
+  margin-bottom: 0.5rem ;
+  background-color: black;
+  }
+
+.link{
+  height:13rem;
+  margin-left: 2rem;
+
+    }
+
+.link__contacto{
+  color:white ;
+  padding-top: 1rem;
+  padding-bottom: 2rem;
+  text-align: center;
+  }
+  
+.btn{
+  background-color: white;
+  width: $ancho/2;
+  height:$alto/2 ;
+  color:black;
+  font-size: 2rem;
+  padding: 0.75rem;
+  border-radius:10rem;
+  margin-left:38rem;
+  margin-right: 15rem ;
+  margin-bottom: 3rem;
+    &:hover {  
+    transform: scale(1.20);
+    background-color:rgb(29, 41, 37);
+    padding:1rem ;
+      }
+    &__texto{
+      color:black;
+        &:hover{
+        color:white;
+        }
+    }   
+  } 
+
+  @media (min-width: 541px) and (max-width: 720px) {
+
+  .link{
+    height:13rem;
+    margin-left: 2rem;
+    
+        }
+  
+  .link__contacto{
+    font-size: 1.50rem;
+    padding-top: 1rem;
+    padding-bottom: 1.5rem;
+    margin-left: 1rem;
+    }
+  
+  .btn{
+    width: $ancho/2.5;
+    height:$alto/2.5 ;
+    font-size: 1.40rem;
+    margin-left:14rem ;
+    padding: 0.5rem;
+    }
+  }
+
+@media (min-width: 320px) and (max-width: 540px) { 
+  
+  body{  
+    margin-left: 0.5rem;
+    margin-right:0.5rem;
+    }
+
+  .tituloh2{
+    font-size: 1.3rem;
+    text-align: center;  
+    color: white;
+    padding: 0.75rem;
+    margin-bottom: 0.5rem ;
+    background-color: black;
+    }
+
+  .link{
+    height: 10rem;
+    margin-left: 1rem;
+
+    }
+  
+  .link__contacto{
+    font-size: 1.25rem;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    text-align: center;
+    margin-left: 1rem;
+     }
+    
+  .btn{
+    width: $ancho/3;
+    height:$alto/3 ;
+    font-size: 1.25rem;
+    padding: 0.25rem;
+    border-radius:10rem;
+    margin-left:6rem;
+    &:hover {  
+      transform: scale(1.10);
+      padding:0.5rem ;
+      }
+    } 
+  }
   
