--- a/scss/_Index.scss
+++ b/scss/_Index.scss
@@ -5,7 +5,7 @@
   text-align: center;
    }
  
- .container-fluid{
+ .carousel{
   width:80rem ;
   height:35rem ;
    }
@@ -19,41 +19,11 @@
   margin-left:3rem ;
   margin-right: 3rem ;
   margin-bottom: 1rem;
+  padding: 1rem;
+  border: solid white
    }
 
 
-.linkContactoIndex{
-  color:white ;
-  padding-top: 1rem;
-  padding-bottom: 2rem;
-  text-align: center;
-  }
-
-.btn{
-  background-color: white;
-  width: $ancho/2;
-  height:$alto/2 ;
-  color:black;
-  font-size: 2rem;
-  padding: 0.75rem;
-  border-radius:10rem;
-  margin-left:37rem;
-  margin-right: 15rem ;
-  margin-bottom: 3rem;
-    &:hover {  
-    transform: scale(1.20);
-    background-color:rgb(29, 41, 37);
-    padding:1rem ;
-     }
-    } 
-
-.btn__texto{
-  color:black;
-    &:hover{
-    color:white;
-    }
-   }
-  
 
 @media (min-width: 541px) and (max-width: 720px) {
    
@@ -63,7 +33,7 @@
     margin-top: 0.5rem;
      }
      
-  .container-fluid{
+  .carousel{
     width:35rem ;
     height:15rem ;
     margin-left: 1rem;
@@ -79,25 +49,11 @@
     margin-right: 2rem ;
     margin-bottom: 0.5rem;
     margin-top: 0.5rem;
+    &__p{
+      font-size:1.25rem ;
+      }
     }
-
-  .indexTexto__p{
-    font-size:1.25rem ;
-    }
-
-  .linkContactoIndex{
-    padding-top: 1rem;
-    padding-bottom: 1.5rem;
-    margin-left: 1rem;
-    }
-
-  .btn{
-    width: $ancho/2.2;
-    height:$alto/2.2 ;
-    margin-left:14rem ;
-    padding: 0.5rem;
-    }
-     
+       
   }
 
 
@@ -110,53 +66,27 @@
     margin-bottom: 0.25rem;
     }
 
-  .container-fluid{
-    width: 23rem ;
+  .carousel{
+    width: 18rem ;
     height:9rem ;
-    padding: 0.5rem;
-    padding-bottom: 1rem;
-    margin-left: 0.5rem;
-    margin-right: 1rem;
+    margin-left: 0.1rem;
+    margin-right: 0.1rem;
     margin-top: 0.5rem;
-    margin-bottom: 2rem;
+    margin-bottom: 0.5rem;
     }
     
   .indexTexto{
     flex-direction: column;
     font-size: 0.5rem;
-    gap: 1rem;
+    gap: 0.2rem;
     margin-left:1rem ;
-    margin-right: 1rem ;
+    margin-right: 0.5rem ;
     margin-bottom: 0.5rem;
     margin-top: 0.5rem;
+    &__p{
+      font-size:0.75rem ;
+       }  
      }
-
-  .indexTexto__p{
-    font-size:0.75rem ;
-     }  
-
-  .linkContactoIndex{
-    font-size: 0.75rem;
-    padding-top: 1rem;
-    padding-bottom: 2rem;
-    margin-left: 1rem;
-    margin-right: 1rem;
-    text-align: center;
-     }
-    
-    .btn{
-      width: $ancho/3;
-      height:$alto/3 ;
-      font-size: 1.25rem;
-      padding: 0.25rem;
-      border-radius:10rem;
-      margin-left:8rem;
-      margin-right: 5rem ;
-      &:hover {  
-        transform: scale(1.10);
-        padding:0.5rem ;
-         }
-      } 
     
   } 
 
