--- a/scss/_actitud.scss
+++ b/scss/_actitud.scss
@@ -1,13 +1,10 @@
-.actitudTituloh2 {
-  margin-left: 25rem;
-  padding-top: 2rem;
-  padding-bottom: 2rem;
-  }
 
-.container-fluid1 {
-  width: 39rem;
-  height: auto;
-    }
+.imagenActitud1 {
+  width: 40rem;
+  height: 20rem;
+  border: solid wheat;
+  border-radius: 5%;
+  }
 
 .container__actitud1 {
   display: grid;
@@ -21,27 +18,27 @@
   margin-left: 5rem;
   margin-right: 5rem;
   margin-bottom: 2rem;
-  }
 
-.container__actitud1.grid__uno {
-  grid-row: 1/2;
-  grid-column: 1/2;
-  background-position: inherit;
-  background-size: cover;
-  background-repeat: no-repeat;
-  }
-
-.container__actitud1.grid__dos {
-  grid-row: 1/2;
-  grid-column: 2/3;
-  background-position: inherit;
-  background-size: cover;
-  background-repeat: no-repeat;
-  }
-
-.container__texto1 {
-  font-size: 1.40rem;
-  text-align: justify;
+  &__uno {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    }
+  
+  &__dos {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    }
+  
+  &__texto {
+    font-size: 1.40rem;
+    text-align: justify;
+    }
   }
 
 .container__actitud2 {
@@ -53,16 +50,18 @@
   padding-right: 1rem;
   padding-bottom: 0.75rem;
   border: solid white;
+
+  &__texto {
+    font-size: 1.4rem;
+    }
   }
 
-.actitudTituloh3 {
+.tituloh3Actitud {
   color: white;
   margin-left: 25rem;
   }
 
-.actitud__texto {
-  font-size: 1.4rem;
-  }
+
 
 .container__actitud3 {
   display: grid;
@@ -76,20 +75,17 @@
   padding-bottom: 0.10rem;
   margin-left: 8rem;
   margin-right: 12rem;
-  }
 
-.grid__container__actitud3 .grid__uno {
-  grid-row: 1/2;
-  grid-column: 1/2;
-  }
-
-.grid__container__actitud3 .grid__dos {
-  grid-row: 1/2;
-  grid-column: 2/3;
-  }
-
-.container__texto2 {
-  text-align: left;
+  &__uno {
+    grid-row: 1/2;
+    grid-column: 1/2;
+    }
+  
+  &__dos {
+    grid-row: 1/2;
+    grid-column: 2/3;
+    }
+  
   }
 
 .imagenActitud {
@@ -97,38 +93,6 @@
   height: 22rem;
   border: solid wheat;
   border-radius: 5%;
-  }
-
-.linkContactoActitud {
-  padding-bottom: 2rem;
-  text-align: center;
-  }
-
-.btn__actitud {
-  background-color: white;
-  width: $ancho/2;
-  height: $alto/2;
-  color: black;
-  font-size: 2rem;
-  padding: 0.75rem;
-  border-radius: 10rem;
-  margin-left: 40rem;
-  margin-right: 15rem;
-  margin-bottom: 3rem;
-
-  &:hover {
-    transform: scale(1.20);
-    background-color: rgb(29, 41, 37);
-    padding: 1rem;
-    }
-  }
-
-.btn__actitud__texto {
-  color: black;
-
-  &:hover {
-    color: white;
-    }
   }
 
 @media (min-width: 541px) and (max-width: 720px) {
@@ -141,108 +105,101 @@
     padding-bottom: 2rem;
   }
 
-  .actitudTituloh3 {
+  .tituloh3Actitud {
     font-size: 1.50rem;
+    margin-left: 2rem;
     margin-right: 1rem;
     padding-top: 2rem;
     padding-bottom: 2rem;
-    text-align: center;
-  }
+    
+    }
+  .imagenActitud1 {
+      width: 35rem;
+      height: 20rem;
+      border: solid wheat;
+      border-radius: 5%;
+      margin-left: 2rem;
+      }  
 
-  .container-fluid1 {
-    width: 40rem;
-    height: 20rem;
-  } 
-  .container__actitud1 {
+   .container__actitud1 {
+    background-color: black;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 22rem;
-    gap: 1rem;
+    grid-template-rows: 20rem;
+    gap: 0.5rem;
     padding-bottom: 0.10rem;
-    margin-left: 2rem;
-    margin-right: 2rem;
+    margin-left: 1rem;
+    margin-right: 1rem;
     margin-bottom: 2rem;
-    }
-  
-  .container__actitud1.grid__uno {
-    grid-row: 1/2;
-    grid-column: 1/2;
-    margin-left: 7rem;
-    }
-    
-  .container__actitud1.grid__dos {
-    grid-row: 1/2;
-    grid-column: 2/3;
-    }
-  
-  .container__texto1{
-    font-size: 1.25rem;
-    text-align: justify;
+       
+    &__uno {
+      grid-row: 1/2;
+      grid-column: 1/1;
+      margin-left: 1rem;
       }
+      
+    &__dos {
+      grid-row: 2/3;
+      grid-column: 1/1;
+      }
+    
+    &__texto{
+      font-size: 1.25rem;
+      text-align: justify;
+        }
+    }
 
   .container__actitud2 {
     margin-left: 2rem;
     margin-right: 2rem;
     padding-bottom: 1rem;
     gap: 2rem;
-  }
+    }
 
-  .actitudTituloh3 {
+  .tituloh3Actitud {
     color: white;
     margin-left: 5rem;
-  }
+    }
 
   .actitud__texto {
     font-size: 1.25rem;
-  }
+    }
 
   .container__actitud3 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 23rem 23rem;
+    grid-template-rows: 27rem 22rem;
     gap: 1rem;
     padding-top: 1em;
     margin-left: 2rem;
     margin-right: 1rem;
-  }
 
-  .grid__container__actitud3 .grid__dos {
-    margin-right: 1rem;
-    grid-row: 2/3;
-    grid-column: 1/1;
-  }
+    &__dos {
+      margin-right: 1rem;
+      grid-row: 2/3;
+      grid-column: 1/1;
+      }
+  
+    &__dos .imagen {
+      width: 80%;
+      height: 5rem;
+      margin-right: 1rem;
+    }
+  
+    &__uno {
+      grid-row: 1/2;
+      grid-column: 1/1;
+      }
 
-  .grid__item .grid__dos .imagen {
-    width: 80%;
-    height: 5rem;
-    margin-right: 1rem;
-  }
-
-  .grid__container__actitud3 .grid__uno {
-    grid-row: 1/2;
-    grid-column: 1/1;
-  }
+    }
 
   .imagenActitud {
-    width: 32rem;
+    width: 37rem;
     height: auto;
+    
+    }
+ 
   }
-
-  .linkContactoActitud {
-    font-size: 1.4rem;
-    text-align: center;
-    padding-bottom: 2rem;
-    text-align: center;
-  }
-
-  .btn__actitud {
-    width: $ancho/2.2;
-    height: $alto/2.2;
-    margin-left: 13rem;
-    padding: 0.5rem;
-  }
-
-}
 
 @media (min-width: 320px) and (max-width: 540px) {
 
@@ -254,54 +211,58 @@
     padding-bottom: 2rem;
     }
 
-   .container-fluid1 {
-    width: 20rem;
-    height: auto;
-    } 
+  .imagenActitud1 {
+      width: 16rem;
+      height: auto;
+      margin-left: 1rem;
+      }     
 
   .container__actitud1 {
+    background-color: black;
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 25rem;
+    grid-template-rows: 25rem 10rem;
     gap: 1rem;
     padding-bottom: 0.10rem;
     margin-left: 1rem;
     margin-right: 1rem;
-    margin-bottom: 2rem;
-    }
-  
-  .container__actitud1.grid__uno {
-    grid-row: 1/2;
-    grid-column: 1/2;
-    margin-left: 7rem;
-     }
+    margin-bottom: 1rem;
+
+    &__uno {
+      grid-row: 1/2;
+      grid-column: 1/1;
+      margin-left: 1rem;
+       }
+      
+    &__dos {
+      grid-row: 2/3;
+      grid-column: 1/1;
+      }
     
-  .container__actitud1.grid__dos {
-    grid-row: 1/2;
-    grid-column: 2/3;
+    &__texto{
+      font-size: 1rem;
+      text-align: justify;
+      }
+    
     }
-  
-  .container__texto1{
-    font-size: 1rem;
-    text-align: justify;
-    }
-
-  .container__texto2{
-    font-size: 1rem;
-    text-align: left;
-    }
-
+    
   .container__actitud2 {
-    margin-left: 1rem;
+    margin-left: 2rem;
     margin-right: 2rem;
     padding-bottom: 0.7rem;
     gap: 1rem;
+
+    &__texto{
+      font-size: 1rem;
+      text-align: left;
+      }
+
     }
 
-  .actitudTituloh3 {
-    font-size: 1rem;
+  .tituloh3Actitud {
+    font-size: 1.25rem;
     color: white;
-    margin-left: 1rem;
+    margin-left: 1.5rem;
     text-align: center;
   }
 
@@ -312,49 +273,32 @@
   .container__actitud3 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 13rem 27rem;
+    grid-template-rows: 14rem 27rem;
     gap: 1rem;
     padding-top: 2rem;
     padding-bottom: 0.10rem;
     margin-left: 1rem;
     margin-right: 1rem;
-    }
-
-  .grid__item .grid__dos .imagen {
-    width: 10rem;
-    height: 5rem;
-    }
-
-  .grid__container__actitud3 .grid__uno {
-    grid-row: 1/2;
-    grid-column: 1/1;
-    }
-
-  .grid__container__actitud3.grid__dos {
-    grid-row: 2/3;
-    grid-column: 1/1;
-    }
-
+  
+    &__dos .imagen {
+      width: 10rem;
+      height: 5rem;
+      }
+  
+    &__uno {
+      grid-row: 1/2;
+      grid-column: 1/1;
+      }
+  
+    &__dos {
+      grid-row: 2/3;
+      grid-column: 1/1;
+      }
+   }
+  
   .imagenActitud {
-    width: 20rem;
+    width: 18rem;
     height: auto;
-    }
-
-  .linkContactoActitud {
-    font-size: 1rem;
-    text-align: center;
-    margin-top: 1rem;
-    padding-bottom: 2rem;
-    text-align: center;
-    }
-
-  .btn__actitud {
-    width: $ancho/3;
-    height: $alto/3;
-    font-size: 1.25rem;
-    padding: 0.5rem;
-    margin-left: 8rem;
-    margin-right: 5rem;
     }
 
   }
