--- a/scss/_footer.scss
+++ b/scss/_footer.scss
@@ -17,23 +17,25 @@ footer {
 .instagram{
   width: 2.75rem;
   height: 2rem;
+  border-radius: 0.5rem;
    }     
 
 
 .facebook{
   width: 2.75rem;
-  height: 2rem ;
+  height: 2rem;
+  border-radius: 0.5rem;
   }
   
 .navegador {
   display: flex;
   flex-wrap: nowrap;
   justify-content:center;
-  margin-top: 0.5rem;
    }
   
 .navegador p a {
-  color:white;
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  color: white;
   font-size: 1rem;
   border-left: 0.10rem solid white;
   padding-left: 1rem;
@@ -50,10 +52,6 @@ p a:hover {
 
 @media (min-width: 320px) and (max-width: 540px) { 
 
-  body{
-    margin-bottom: 0.5rem;
-  }
-
   .instagram{
     width: 2rem;
     height: 1.5rem;
@@ -64,14 +62,15 @@ p a:hover {
     height: 1.5rem ;
     }
 
+  .navegador {
+    margin-left: 0.5rem ;
+    }   
+       
   .navegador p a{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: white;
     font-weight: 0.5rem;
     font-size: 0.75rem;
-    border-left: 0.1rem solid white;
     padding-left: 0.5rem;
     padding-right: 0.5rem;
-    }    
+    } 
       
   }  
