--- a/scss/_header.scss
+++ b/scss/_header.scss
@@ -13,12 +13,13 @@ header {
   display: flex;
   flex-direction: row;
   gap:1rem;
-   }
 
-.logo {
-  width: 15vw;
-  height: 10vh; 
-   } 
+  &__logo {
+    width: 15vw;
+    height: 10vh; 
+     } 
+
+   }
 
 .navegador {
   display: flex;
@@ -29,9 +30,8 @@ header {
 .navegador p a {
   font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
   color: white;
-  font-weight: 1rem;
   font-size: 1rem;
-  border-left: 0.2rem solid white;
+  border-left: 0.1rem solid white;
   padding-left: 1rem;
   padding-right: 1rem;
    }
@@ -46,16 +46,19 @@ a {
 
 @media (min-width: 541px) and (max-width: 720px) {
 
+  header {
+    height: 8rem;
+    background-color: black;
+     }
+
   .header{
     display: flex;
     flex-direction: row;
-     }
-
-
-  .logo {
-    width: 20vw;
-    height: 10vh; 
-    } 
+    &__logo {
+      width: 20vw;
+      height: 10vh; 
+      } 
+    }
  
   }
 
@@ -65,32 +68,30 @@ a {
     margin-left: 0.5rem;
     margin-right: 0.5rem;
     padding-top: 1rem;
-    }
+    width: 20rem;
+    height: 6rem;
+    background-color: black;
+     }
 
   .tituloh1 {
     font-size: 1.25rem;
     }
       
-  .logo {
+  .header__logo {
     width: 33vw;
     height: 7vh; 
     }
-
+  
   .navegador {
-    margin-left: 2rem ;
-    }  
+    margin-left: 0.5rem ;
+    }     
+
 
   .navegador p a{
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
-    color: white;
     font-weight: 0.5rem;
-    font-size: 0.5rem;
-    border-left: 0.2rem solid white;
-    padding-left: 2rem;
+    font-size: 0.75rem;
+    padding-left: 0.5rem;
+    padding-right: 0.5rem;
   
     }    
-
-  /*.a{
-    font-size: 2rem;
-  }*/
   }
