--- a/scss/_nosotros.scss
+++ b/scss/_nosotros.scss
@@ -1,10 +1,3 @@
-.nosotrosTituloh2{
-  text-align: center;
-  color: white;
-  padding: 1rem;
-  margin-top: 2rem;
-    }
-
 .nosotrosTituloh3{
   text-align: center;  
   color: white;
@@ -31,7 +24,7 @@
   font-size:1.5rem ;
   }     
 
-.grid__container__nosotros1{
+.container__nosotros1{
   display:grid;
   grid-template-columns:50% 50%;
   grid-template-rows: 25rem 25rem 8rem;
@@ -39,57 +32,64 @@
   justify-content: center;
   align-content: center;
   background-position: center;
-  padding-top: 1.5rem;    
+  padding-top: 1rem;    
   margin-left: 5rem;
   margin-right: 5rem;
-  }
-   
-.grid__container__nosotros1 .grid__uno{
-  grid-row: 1/2;
-  grid-column: 1/2;
-  background-image: url("../recursos/Nosotros 1.jpg");
-  background-position: inherit;
-  background-size: cover;
-  background-repeat: no-repeat;
-  } 
-  
-.grid__container__nosotros1 .grid__dos{
-  grid-row: 1/2;
-  grid-column: 2/3;
-  background-image: url("../recursos/Nosotros 2.jpg");
-  background-position: inherit;
-  background-size: cover;
-  background-repeat: no-repeat;
-  }
-        
-.grid__container__nosotros1 .grid__tres{
-  grid-row: 2/3;
-  grid-column: 1/2;
-  background-image: url("../recursos/Nosotros 3.jpg");
-  background-position: inherit;
-  background-size: cover;
-  background-repeat: no-repeat;
-  }
-        
-.grid__container__nosotros1  .grid__cuatro{
-  grid-row: 2/3;
-  grid-column: 2/3;
-  background-image: url("../recursos/Nosotros 4.jpg");
-  background-position: inherit;
-  background-size: cover;
-  background-repeat: no-repeat;
-  }
-        
-.grid__container__nosotros1 .grid__cinco{
-  grid-row: 3/4;
-  grid-column: 1/3;
-  display:flex;
-  flex-direction:column;
-  justify-content:stretch;
-  align-content: stretch;
+  background-color: black;
+  &__uno{
+    grid-row: 1/2;
+    grid-column: 1/2;
+    background-image: url("../recursos/Nosotros 1.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    } 
+    
+  &__dos{
+    grid-row: 1/2;
+    grid-column: 2/3;
+    background-image: url("../recursos/Nosotros 2.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    }
+          
+  &__tres{
+    grid-row: 2/3;
+    grid-column: 1/2;
+    background-image: url("../recursos/Nosotros 3.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    }
+          
+  &__cuatro{
+    grid-row: 2/3;
+    grid-column: 2/3;
+    background-image: url("../recursos/Nosotros 4.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    }
+          
+  &__cinco{
+    grid-row: 3/4;
+    grid-column: 1/3;
+    display:flex;
+    flex-direction:column;
+    justify-content:stretch;
+    align-content: stretch;
+    }
   }
 
-.grid__container__nosotros2{
+  .border{
+    color: white;
+    border-style: dashed ;
+    border-radius: 5%;
+    padding: 1rem;
+    }
+
+.container__nosotros2{
   display:grid;
   grid-template-columns:50% 50%;
   grid-template-rows: 25rem 25rem 10rem;
@@ -100,66 +100,61 @@
   padding-bottom: 0.10rem;
   margin-left: 5rem;
   margin-right: 5rem;
-  } 
+  &__uno{
+    grid-row: 1/2;
+    grid-column: 1/2;
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border: solid white
+    } 
   
-.border{
-  color: white;
-  border-style: dashed ;
-  border-radius: 5%;
-  padding: 1rem;
-  }
-
-.grid__container__nosotros2.grid__uno{
-  grid-row: 1/2;
-  grid-column: 1/2;
-  background-position: inherit;
-  background-size: cover;
-  background-repeat: no-repeat;
-  border: solid white
-  } 
-    
-
-.grid__container__nosotros2  .grid__dos{
-  grid-row: 1/2;
-  grid-column: 2/3;
-  background-image: url("../recursos/nosotros_5.jpg");
-  background-position: inherit;
-  background-size: cover;
-  background-repeat: no-repeat;
-  border-radius: 5%;
-  }
-
-.grid__container__nosotros2 .grid__tres{
-  grid-row: 2/3;
-  grid-column: 1/2;
-  background-position: inherit;
-  background-size: cover;
-  background-repeat: no-repeat;
-  border-radius: 5%;
-  }
-
-.grid__container__nosotros2  .grid__cuatro{
-  grid-row: 2/3;
-  grid-column: 2/3;
-  background-position: inherit;
-  background-size: cover;
-  background-repeat: no-repeat;
-  }
-
-.grid__container__nosotros2  .grid__cinco .p__link{
-  grid-row: 3/4;
-  grid-column: 1/3;
-  background-image: url("../recursos/caphai.png");
-  background-position: inherit;
-  background-size: cover;
-  background-repeat: no-repeat;
-  border-radius: 5%;
-  }
+  &__dos{
+    grid-row: 1/2;
+    grid-column: 2/3;
+    background-image: url("../recursos/nosotros_5.jpg");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 5%;
+    }
   
+  &__tres{
+    grid-row: 2/3;
+    grid-column: 1/2;
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 5%;
+    }
+  
+  &__cuatro{
+    grid-row: 2/3;
+    grid-column: 2/3;
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    }
+  
+  &__cinco .p__link{
+    grid-row: 3/4;
+    grid-column: 1/3;
+    background-image: url("../recursos/caphai.png");
+    background-position: inherit;
+    background-size: cover;
+    background-repeat: no-repeat;
+    border-radius: 5%;
+    }
+
+  } 
+ 
 .imagenCaphai{
-  width: 38rem;
+  width: 40rem;
   height: 25rem;
-  border-radius:5% ;
+  border-radius:5%;
+  background-position: inherit;
+  background-size: cover;
+  background-repeat: no-repeat
   } 
 
 .p__link{   
@@ -167,38 +162,8 @@
   height: 7rem;
   margin-left: 25rem ;
   }
+      
 
-.linkContactoNosotros{
-  font-size: 2rem;
-  padding-bottom: 2rem;
-  text-align: center;
-  }
-      
-.btn__nosotros{
-  background-color:white;
-  width: $ancho/2;
-  height:$alto/2 ;
-  color:black;
-  font-size: 2rem;
-  padding: 0.75rem;
-  border-radius:10rem;
-  margin-left:37rem;
-  margin-right: 15rem ;
-  margin-bottom: 3rem;
-    &:hover {  
-    transform: scale(1.20);
-    background-color:rgb(29, 41, 37);
-    padding:1rem ;
-    }
-  } 
-      
-.btn__nosotros__texto{
-  color:black;
-    &:hover{
-    color:white;
-    }
-  }
-    
 @media (min-width:541px) and (max-width:720px){
 
   .nosotrosTituloh2{
@@ -216,7 +181,7 @@
     text-align: justify;
     }   
 
-  .grid__container__nosotros1{
+  .container__nosotros1{
     display:grid;
     grid-template-columns:50% 50%;
     grid-template-rows: 20rem 20rem 8rem;
@@ -233,7 +198,7 @@
     }
     
 
-  .grid__container__nosotros2{
+  .container__nosotros2{
     display:grid;
     grid-template-columns:50% 50%;
     grid-template-rows: 18rem 19rem 8rem;
@@ -260,19 +225,6 @@
     margin-left: 10rem ;
     }
 
-  .linkContactoNosotros{   
-    font-size: 1.4rem;
-    margin-left: 1rem;
-    text-align: center;
-    }
-  
-  .btn__nosotros{
-    width: $ancho/2.2;
-    height:$alto/2.2 ;
-    margin-left:13rem ;
-    padding: 0.5rem;
-    }
-
   }
   
 @media (min-width:320px) and (max-width:540px){  
@@ -282,7 +234,7 @@
     margin-top: 0.25rem;
     }
 
-  .grid__container__nosotros1{
+  .container__nosotros1{
     display:grid;
     grid-template-columns:50% 50%;
     grid-template-rows: 12rem 12rem 15rem;
@@ -292,6 +244,11 @@
     margin-right: 0.5rem;
     margin-top: 0.5rem;
     margin-bottom: 0.5rem;
+        &__cinco{
+     border:solid white;
+     padding: 0.5rem;
+     border-style:groove;
+      }
     }
 
   .texto{
@@ -317,7 +274,7 @@
     font-size: 1rem;
     }    
 
-  .grid__container__nosotros2{
+  .container__nosotros2{
     display:grid;
     grid-template-columns:100% ;
     grid-template-rows: 21rem 15rem 21rem 15rem 5rem;
@@ -326,67 +283,48 @@
     padding-bottom: 0.10rem;
     margin-left: 1rem;
     margin-right: 1rem;
-    }
+
+    &__uno{
+      grid-row: 1/2;
+      grid-column: 1/1;
+       } 
   
-  .grid__container__nosotros2.grid__uno{
-    grid-row: 1/2;
-    grid-column: 1/1;
-     } 
-
-  .grid__container__nosotros2  .grid__dos{
-    grid-row: 2/3;
-    grid-column: 1/1;
-    background-image: url("../recursos/nosotros_5.jpg");
+    &__dos{
+      grid-row: 2/3;
+      grid-column: 1/1;
+      background-image: url("../recursos/nosotros_5.jpg");
+       }
+  
+    &__cuatro{
+      grid-row: 3/4;
+      grid-column: 1/1;
+       }
+  
+    &__tres{
+      grid-row: 4/5;
+      grid-column: 1/1;
+      background-image: url("../recursos/nosotros_6.png");
+       }
+  
+    &__cinco .p__link{
+      grid-row: 5/6;
+      grid-column: 1/1;
+      background-image: url("../recursos/caphai.png");
+       }
      }
-
-  .grid__container__nosotros2  .grid__cuatro{
-    grid-row: 3/4;
-    grid-column: 1/1;
-     }
-
-  .grid__container__nosotros2 .grid__tres{
-    grid-row: 4/5;
-    grid-column: 1/1;
-    background-image: url("../recursos/nosotros_6.png");
-     }
-
-  .grid__container__nosotros2  .grid__cinco .p__link{
-    grid-row: 5/6;
-    grid-column: 1/1;
-    background-image: url("../recursos/caphai.png");
-     }
-     
+      
   .imagenCaphai{
-    width: 15em;
-    height: 10rem;
+    width: 23rem;
+    height: 15rem;
     border-radius:5% ;
-      }  
+          }  
 
   .p__link{   
     width: 10rem;
     height: 3rem;
     margin-left: 5rem ;
     }
-
-  .linkContactoNosotros{
-    font-size: 1rem;
-    padding-bottom: 2rem;
-    margin-top: 1rem;
-    margin-left: 0.75rem;
-    text-align: center;
-    }
-    
-  .btn__nosotros{
-    width: $ancho/3;
-    height:$alto/3 ;
-    font-size: 1.25rem;
-    padding: 0.5rem;
-    border-radius:10rem;
-    margin-left:8rem;
-    margin-right: 5rem ;
-    } 
-    
-    
+  
   }
     
   
