--- a/css/estilos.css
+++ b/css/estilos.css
@@ -206,7 +206,7 @@ p a:hover {
     margin-bottom: 0.5rem;
     margin-top: 0.5rem; }
     .indexTexto__p {
-      font-size: 0.75rem; } }
+      font-size: 1rem; } }
 
 .nosotrosTituloh3 {
   text-align: center;
@@ -331,7 +331,7 @@ p a:hover {
     border-radius: 5%; }
 
 .imagenCaphai {
-  width: 40rem;
+  width: 35rem;
   height: 25rem;
   border-radius: 5%;
   background-position: inherit;
@@ -392,7 +392,7 @@ p a:hover {
   .container__nosotros1 {
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 12rem 12rem 15rem;
+    grid-template-rows: 12rem 12rem 17rem;
     gap: 0.5rem;
     padding-top: 0.25rem;
     margin-left: 0.5rem;
@@ -597,10 +597,13 @@ p a:hover {
   color: white;
   margin-left: 25rem; }
 
+.actitud__texto {
+  font-size: 1.25rem; }
+
 .container__actitud3 {
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: 25rem;
+  grid-template-rows: 30rem;
   gap: 5rem;
   justify-content: center;
   align-content: center;
@@ -636,7 +639,7 @@ p a:hover {
     padding-top: 2rem;
     padding-bottom: 2rem; }
   .imagenActitud1 {
-    width: 35rem;
+    width: 33rem;
     height: 20rem;
     border: solid wheat;
     border-radius: 5%;
@@ -690,7 +693,7 @@ p a:hover {
       grid-row: 1/2;
       grid-column: 1/1; }
   .imagenActitud {
-    width: 37rem;
+    width: 35rem;
     height: auto; } }
 
 @media (min-width: 320px) and (max-width: 540px) {
@@ -756,7 +759,7 @@ p a:hover {
       grid-row: 2/3;
       grid-column: 1/1; }
   .imagenActitud {
-    width: 20rem;
+    width: 22rem;
     height: auto; } }
 
 .container__contacto {
@@ -851,7 +854,7 @@ p a:hover {
   width: 30rem;
   height: 23rem;
   text-align: center;
-  margin-left: 30rem;
+  margin-left: 27rem;
   margin-top: 2rem;
   margin-bottom: 2rem;
   border-radius: 7%; }
@@ -965,45 +968,45 @@ p a:hover {
     height: 17rem; }
   .container__contacto {
     grid-template-columns: 100%;
-    grid-template-rows: 18rem 30rem 18rem 18rem 6rem 6rem;
+    grid-template-rows: 18rem 32rem 18rem 18rem 8rem 8rem;
     justify-items: left;
     align-items: left;
     padding: 0.5rem;
     margin-top: 0.5rem;
     margin-bottom: 1rem;
-    margin-left: 2rem;
+    margin-left: 3rem;
     gap: 0.50rem;
     width: 19rem;
-    height: 100rem; }
+    height: 105rem; }
     .container__contacto__uno {
       align-content: center;
       grid-row: 1/2;
       grid-column: 1/1;
-      width: 17rem;
+      width: 20rem;
       padding: 0.5rem; }
     .container__contacto__uno__texto {
       grid-row: 2/3;
       grid-column: 1/1;
-      width: 17rem;
+      width: 20rem;
       height: 27rem; }
     .container__contacto__dos {
       grid-row: 3/4;
       grid-column: 1/1;
-      width: 17rem; }
+      width: 20rem; }
     .container__contacto__tres {
       grid-row: 4/5;
       grid-column: 1/1;
-      width: 17rem; }
+      width: 20rem; }
     .container__contacto__dos__texto {
       grid-row: 5/6;
       grid-column: 1/1;
-      width: 17rem;
+      width: 20rem;
       height: 4rem; }
     .container__contacto__tres__texto {
       grid-row: 6/7;
       grid-column: 1/1;
       font-size: 0.5rem;
-      width: 17rem;
+      width: 20rem;
       height: 5rem; }
   .textoGrid1 {
     font-size: 1rem; }
@@ -1021,7 +1024,7 @@ p a:hover {
     padding: 0.5rem;
     width: 18rem;
     height: 29rem;
-    margin-left: 2rem;
+    margin-left: 4rem;
     margin-right: 1rem;
     margin-top: 2rem;
     margin-bottom: 3rem; }
@@ -1094,7 +1097,7 @@ p {
   font-size: 2rem;
   padding: 0.75rem;
   border-radius: 10rem;
-  margin-left: 38rem;
+  margin-left: 35rem;
   margin-right: 15rem;
   margin-bottom: 3rem; }
   .btn:hover {
@@ -1130,7 +1133,7 @@ p {
     font-size: 1.3rem;
     text-align: center;
     color: white;
-    padding-top: 1rem;
+    padding-top: 1.5rem;
     margin-bottom: 0.5rem; }
   .link {
     height: 11rem;
