--- a/scss/_variables.scss
+++ b/scss/_variables.scss
@@ -1,5 +1,4 @@
 $color-body:rgb(48, 68, 56);
-$color-p: white;
 $color-h1:white;
 $color-h2:white;
 $color-h3:white;
@@ -15,7 +14,7 @@ $font-size-h4:1.75;
 $font-size-p:1.5rem;
 $ancho:20rem;
 $alto:10rem;
-$imagenescontactos:(
+$imagenescontacto:(
     key1:"url('../recursos/contacto/contacto__1.jpg')", 
     key2:"url('../recursos/contacto/contacto__2.jpg')",
     key3:"url('../recursos/contacto/contacto__5.jpg')",
