--- a/css/estilos.css
+++ b/css/estilos.css
@@ -198,7 +198,6 @@ p a:hover {
     margin-top: 0.5rem;
     margin-bottom: 0.5rem; }
   .indexTexto {
-    flex-direction: column;
     font-size: 0.5rem;
     gap: 0.2rem;
     margin-left: 1rem;
@@ -368,7 +367,7 @@ p a:hover {
   .container__nosotros2 {
     display: grid;
     grid-template-columns: 50% 50%;
-    grid-template-rows: 18rem 19rem 8rem;
+    grid-template-rows: 18rem 19rem 6rem;
     gap: 2rem;
     padding-bottom: 0.10rem;
     margin-left: 2rem;
@@ -450,7 +449,7 @@ p a:hover {
   .p__link {
     width: 10rem;
     height: 3rem;
-    margin-left: 5.5rem; } }
+    margin-left: 7rem; } }
 
 .container__galeria {
   display: grid;
@@ -601,9 +600,10 @@ p a:hover {
   font-size: 1.25rem; }
 
 .container__actitud3 {
+  background-color: black;
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: 30rem;
+  grid-template-rows: 25rem;
   gap: 5rem;
   justify-content: center;
   align-content: center;
@@ -710,7 +710,7 @@ p a:hover {
   .container__actitud1 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 24rem 13rem;
+    grid-template-rows: 22rem 13rem;
     gap: 1rem;
     margin-left: 1rem;
     margin-right: 1rem;
@@ -743,7 +743,7 @@ p a:hover {
   .container__actitud3 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 14rem 27rem;
+    grid-template-rows: 14rem 25rem;
     gap: 1rem;
     padding-top: 2rem;
     padding-bottom: 0.10rem;
@@ -866,14 +866,18 @@ p a:hover {
     font-size: 1.5rem;
     padding-left: 1.5rem; }
   .imput__contacto__uno {
+    background-color: #cdeec9;
     padding: 0.50rem;
     height: 2rem;
     width: 17rem; }
   .imput__contacto__dos {
+    background-color: #cdeec9;
     padding: 0.50rem;
     height: 5rem;
     width: 15rem;
     text-align: left; }
+  .imput__contacto__tres {
+    background-color: #cdeec9; }
 
 @media (min-width: 541px) and (max-width: 720px) {
   .contactoTituloh2 {
@@ -885,8 +889,8 @@ p a:hover {
     grid-template-columns: 50% 50%;
     grid-template-rows: 18rem 18rem 5rem;
     gap: 1rem;
-    margin-left: 0.5rem;
-    margin-right: 1rem;
+    margin-left: 0.1rem;
+    margin-right: 0.2rem;
     margin-top: 0.5rem;
     margin-bottom: 1rem;
     padding: 2rem; }
@@ -894,38 +898,38 @@ p a:hover {
       grid-row: 1/2;
       grid-column: 1/2;
       margin: auto;
-      width: 15rem;
+      width: 17rem;
       height: 18rem; }
     .container__contacto__uno__texto {
       font-size: 1rem;
       grid-row: 1/2;
-      width: 15rem;
+      width: 17rem;
       height: 18rem;
       grid-column: 2/3; }
     .container__contacto__dos {
       grid-row: 2/3;
       grid-column: 1/2;
-      width: 15rem;
+      width: 17rem;
       height: 18rem; }
     .container__contacto__tres {
       grid-row: 2/3;
       grid-column: 2/3;
-      width: 15rem;
+      width: 17rem;
       height: 18rem; }
     .container__contacto__dos__texto {
       font-size: 1rem;
       grid-row: 3/4;
       grid-column: 1/2;
-      width: 15rem;
+      width: 17rem;
       height: 5rem; }
     .container__contacto__tres__texto {
       font-size: 1rem;
       grid-row: 3/4;
       grid-column: 2/3;
-      width: 15rem;
+      width: 17rem;
       height: 5rem; }
   .textoGrid1 {
-    font-size: 0.75rem; }
+    font-size: 0.8rem; }
   .textoGrid2 {
     font-size: 1rem; }
   .contactoTexto {
@@ -974,7 +978,7 @@ p a:hover {
     padding: 0.5rem;
     margin-top: 0.5rem;
     margin-bottom: 1rem;
-    margin-left: 3rem;
+    margin-left: 2rem;
     gap: 0.50rem;
     width: 19rem;
     height: 105rem; }
@@ -1082,12 +1086,11 @@ p {
 .link {
   height: 13rem;
   margin-left: 2rem; }
-
-.link__contacto {
-  color: white;
-  padding-top: 1rem;
-  padding-bottom: 2rem;
-  text-align: center; }
+  .link__contacto {
+    color: white;
+    padding-top: 1rem;
+    padding-bottom: 2rem;
+    text-align: center; }
 
 .btn {
   background-color: white;
@@ -1113,11 +1116,11 @@ p {
   .link {
     height: 13rem;
     margin-left: 2rem; }
-  .link__contacto {
-    font-size: 1.50rem;
-    padding-top: 1rem;
-    padding-bottom: 1.5rem;
-    margin-left: 1rem; }
+    .link__contacto {
+      color: white;
+      padding-top: 1rem;
+      padding-bottom: 2rem;
+      text-align: center; }
   .btn {
     width: 8rem;
     height: 4rem;
@@ -1138,18 +1141,18 @@ p {
   .link {
     height: 11rem;
     margin-left: 1rem; }
-  .link__contacto {
-    font-size: 1.25rem;
-    padding-top: 1rem;
-    padding-bottom: 2rem;
-    text-align: center; }
+    .link__contacto {
+      font-size: 1.25rem;
+      padding-top: 1rem;
+      padding-bottom: 2rem;
+      text-align: center; }
   .btn {
     width: 6.66667rem;
     height: 3.33333rem;
     font-size: 1.25rem;
     padding: 0.25rem;
     border-radius: 10rem;
-    margin-left: 7.5rem; }
+    margin-left: 8rem; }
     .btn:hover {
       transform: scale(1.1);
       padding: 0.5rem; } }
