--- a/scss/_actitud.scss
+++ b/scss/_actitud.scss
@@ -65,10 +65,11 @@
   font-size: 1.25rem;
 }
 
-.container__actitud3 {
+.container__actitud3{
+  background-color: black;
   display: grid;
   grid-template-columns: 50% 50%;
-  grid-template-rows: 30rem;
+  grid-template-rows: 25rem;
   gap: 5rem;
   justify-content: center;
   align-content: center;
@@ -185,21 +186,18 @@
       width: 80%;
       height: 5rem;
       margin-right: 1rem;
-    }
+      }
   
     &__uno {
       grid-row: 1/2;
       grid-column: 1/1;
       }
-
     }
 
   .imagenActitud {
     width: 35rem;
     height: auto;
-    
     }
- 
   }
 
 @media (min-width: 320px) and (max-width: 540px) {
@@ -221,7 +219,7 @@
   .container__actitud1 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 24rem 13rem;
+    grid-template-rows: 22rem 13rem;
     gap: 1rem;
     margin-left: 1rem;
     margin-right: 1rem;
@@ -242,7 +240,6 @@
       font-size: 1rem;
       text-align: justify;
       }
-    
     }
     
   .container__actitud2 {
@@ -255,7 +252,6 @@
       font-size: 1rem;
       text-align: left;
       }
-
     }
 
   .tituloh3Actitud {
@@ -272,7 +268,7 @@
   .container__actitud3 {
     display: grid;
     grid-template-columns: 100%;
-    grid-template-rows: 14rem 27rem;
+    grid-template-rows: 14rem 25rem;
     gap: 1rem;
     padding-top: 2rem;
     padding-bottom: 0.10rem;
