--- a/scss/_Index.scss
+++ b/scss/_Index.scss
@@ -32,7 +32,7 @@
      }
      
   .carousel{
-    width:35rem ;
+    width:33rem ;
     height:15rem ;
     margin-left: 1rem;
     margin-right: 1rem;
@@ -73,6 +73,7 @@
     }
     
   .indexTexto{
+    flex-direction: column;
     font-size: 0.5rem;
     gap: 0.2rem;
     margin-left:1rem ;
