--- a/scss/_contacto.scss
+++ b/scss/_contacto.scss
@@ -139,7 +139,13 @@
 
  &__contacto__tres{
     background-color: rgb(205, 238, 201);
-  }
+      }
+
+ &__contacto__cuatro{
+    background-color: rgb(205, 238, 201);
+          }
+    
+
 }
 
 
@@ -245,7 +251,7 @@
       text-align: left;
          }  
     }
- }
+   }
 
 @media (min-width: 320px) and (max-width: 540px) {
  
@@ -274,7 +280,7 @@
   
   .container__contacto {
     grid-template-columns: 100%;
-    grid-template-rows: 18rem 34rem 18rem 18rem 8rem 8rem;
+    grid-template-rows: 18rem 25rem 18rem 18rem 5rem 5rem;
     justify-items: left;
     align-items: left;
     padding: 0.5rem;
@@ -283,7 +289,7 @@
     margin-left: 2rem;
     gap: 0.50rem;
     width: 19rem;
-    height:105rem;
+    height:92rem;
 
     &__uno {
       align-content: center;
@@ -297,7 +303,7 @@
       grid-row: 2/3;
       grid-column:1/1;
       width: 20rem;
-      height: 27rem;
+      height: 25rem;
        }
    
     &__dos {
@@ -316,7 +322,7 @@
       grid-row: 5/6;
       grid-column: 1/1;
       width: 20rem;
-      height: 4rem;
+      height: 5rem;
        }
   
     &__tres__texto  {
@@ -378,8 +384,17 @@
         height: 5rem;
         width: 15rem;
         }
-  
-     }
+
+    &__contacto__tres{
+        height: 2rem;
+        width: 11rem;
+         }  
+    &__contacto__cuatro{
+          height: 2rem;
+          width: 10rem;
+          margin-left: 1rem;
+           }      
+         }
   }
  
 
