--- a/scss/style.scss
+++ b/scss/style.scss
@@ -71,7 +71,7 @@ p {
   font-size: 2rem;
   padding: 0.75rem;
   border-radius:10rem;
-  margin-left:35rem;
+  margin-left:34rem;
   margin-right: 15rem ;
   margin-bottom: 3rem;
     &:hover {  
@@ -90,9 +90,10 @@ p {
   @media (min-width: 541px) and (max-width: 720px) {
 
   .link{
-    height:13rem;
+    height:12rem;
     margin-left: 2rem;
     &__contacto{
+      font-size: 1.5rem;
       color:white ;
       padding-top: 1rem;
       padding-bottom: 2rem;
@@ -106,7 +107,7 @@ p {
     font-size: 1.40rem;
     margin-left:14rem ;
     padding: 0.5rem;
-    }
+     }
   }
 
 @media (min-width: 320px) and (max-width: 540px) { 
